# coro-code

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: interactive.rs  mod.rs  run.rs  test.rs  tools.rs
cli/src/config/: loader.rs  mod.rs
cli/src/interactive/: README.md  animation.rs  app.rs  blocks.rs  input_history.rs  message_handler.rs  mod.rs  state.rs  task_executor.rs  terminal_output.rs  text_utils.rs
cli/src/interactive/components/: input_section.rs  logo.rs  mod.rs  status_line.rs
cli/src/interactive/file_search/: README.md  benchmarks.rs  config.rs  engine.rs  fuzzy.rs  git_integration.rs  input_parser.rs  tests.rs
cli/src/interactive/pages/: main_page.rs  mod.rs  router_test.rs
cli/src/interactive/router/: README.md  core.rs  integration.rs  mod.rs  route.rs  router.rs
cli/src/output/: cli_handler.rs  formatters.rs  interactive_handler.rs  mod.rs
cli/src/tools/: bash.rs  ckg.rs  edit.rs  glob.rs  json_edit.rs  mod.rs  registry.rs  status_report.rs
core/: Cargo.toml
core/examples/: custom_system_prompt.rs
core/src/: error.rs  lib.rs
core/src/agent/: base.rs  config.rs  core.rs  execution.rs  mod.rs  prompt.rs
core/src/config/: config.rs  mod.rs  model_config.rs  types.rs
core/src/llm/: client.rs  message.rs  mod.rs
core/src/llm/providers/: anthropic.rs  openai.rs
core/src/output/: mod.rs
core/src/tools/: base.rs  mod.rs  output_formatter.rs  registry.rs  utils.rs
core/src/tools/builtin/: bash.rs  edit.rs  mcp.rs  mod.rs  task_done.rs  thinking.rs
core/src/tools/utils/: run.rs
core/src/trajectory/: entry.rs  mod.rs  recorder.rs
examples/: google.json  openai.json
scripts/: README.md  get-version.bash  publish-crates-io.bash  setup-pre-commit-hooks.bat  setup-pre-commit-hooks.ps1
trae_agent_rs/: .gitignore  Cargo.toml  README.md  README_zh.md
trae_agent_rs/cli/: Cargo.toml
trae_agent_rs/cli/src/: main.rs
trae_agent_rs/cli/src/commands/: interactive.rs  mod.rs  run.rs  test.rs  tools.rs
trae_agent_rs/cli/src/interactive/: README.md  app.rs  input_history.rs  message_handler.rs  mod.rs  state.rs  task_executor.rs  terminal_output.rs
trae_agent_rs/cli/src/interactive/components/: input_section.rs  logo.rs  mod.rs  status_line.rs
trae_agent_rs/cli/src/interactive/file_search/: README.md  cache.rs  config.rs  engine.rs  fuzzy.rs  input_parser.rs  mod.rs  provider.rs  tests.rs
trae_agent_rs/cli/src/output/: cli_handler.rs  formatters.rs  interactive_handler.rs  mod.rs
trae_agent_rs/cli/src/tools/: status_report.rs
trae_agent_rs/cli/src/ui/: mod.rs
trae_agent_rs/core/: Cargo.toml
trae_agent_rs/core/examples/: custom_system_prompt.rs
trae_agent_rs/core/src/: error.rs  lib.rs
trae_agent_rs/core/src/agent/: execution.rs  mod.rs  trae_agent.rs
trae_agent_rs/core/src/config/: agent_config.rs  api_config.rs  cache.rs  config.rs  loader.rs  mod.rs  provider_config.rs
trae_agent_rs/core/src/llm/: client.rs  message.rs  mod.rs  providers.rs
trae_agent_rs/core/src/llm/providers/: openai.rs
trae_agent_rs/core/src/output/: mod.rs
trae_agent_rs/core/src/tools/: mod.rs  utils.rs
trae_agent_rs/core/src/tools/builtin/: ckg.rs  json_edit.rs  mod.rs  task_done.rs
trae_agent_rs/core/src/tools/utils/: run.rs
trae_agent_rs/core/src/trajectory/: entry.rs  mod.rs  recorder.rs
trae_agent_rs/examples/: anthropic.json
