[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.0.2"
edition = "2021"
authors = ["Blushyes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Blushyes/coro-code"
homepage = "https://github.com/Blushyes/coro-code"
description = "Coro Code - A high-performance AI coding agent written in Rust"
keywords = ["ai", "agent", "llm", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

# Enable minimal optimizations in debug mode
[profile.dev]
opt-level = 1

# Enable higher-level optimizations for dependencies, but not for our own code
[profile.dev.package."*"]
opt-level = 3

# Link Time Optimization: Sacrifice compile time for more performance
[profile.release]
lto = "thin"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Terminal UI
iocraft = { git = "https://github.com/Blushyes/iocraft", rev = "a723a8c3de73ffb98d94ad46a33bdd1a21a5f9f0" }
# iocraft = "0.7"
crossterm = "0.29"
smol = "2.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
shellexpand = "3.0"

# Configuration
config = "0.15"

# Template engine
handlebars = "6.0"

# File system operations
walkdir = "2.0"
ignore = "0.4"

# Process execution
which = "8.0"
