[package]
name = "coro-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI application for coro-code - A high-performance AI coding agent"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "coro"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
iocraft = { workspace = true }
crossterm = { workspace = true }
smol = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }

# Local dependencies
coro-core = { path = "../core" }

# CLI-specific dependencies
async-trait = "0.1"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
colored = "2.0"
ctrlc = "3.0"
unicode-width = "0.2.1"
rand = "0.8"
regex = "1.11.1"

# Dependencies for moved tools
jsonpath-rust = "0.7"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
