[package]
name = "trae-agent-rs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Trae Agent - LLM-based agent for software engineering tasks"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
shellexpand = { workspace = true }
config = { workspace = true }
handlebars = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
which = { workspace = true }

# Core-specific dependencies
async-trait = "0.1"
regex = "1.0"
base64 = "0.22"
url = "2.0"
mime = "0.3"
tempfile = "3.0"
bytes = "1.0"
async-openai = "0.29"
jsonpath-rust = "0.7"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
